# R3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  Doxyfile  README.md  build.sh  compile_commands.json  cpp.hint  format.sh
app/: Application.cpp  Application.cxx  Application.hpp  Application.hxx  CMakeLists.txt  DynamicLibrary.cxx  DynamicLibrary.hxx  Linux-DynamicLibrary.cxx  Win32-DynamicLibrary.cxx  main.cpp  main.cxx
editor/: CMakeLists.txt  Cube.cpp  Cube.hpp  Editor.cpp  Editor.hpp  LightCube.hpp  Vertices.hpp  main.cpp
editor/editor/: Editor.cxx  Editor.hxx
editor/src/: Editor.cpp  Editor.hpp
engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  README.md
engine/api/: Check.hpp  Ensure.hpp  Log.hpp  Types.hpp
engine/core/: Engine.cpp  Renderer.hpp  Window.hpp
engine/hal/: IWindow.hpp
engine/hal/opengl/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shader.ipp  Texture.hpp  Window.cpp  Window.hpp
engine/include/: R3  R3_components  R3_core  R3_input  R3_systems
engine/private/api/: Memory.hxx  Profile.hxx
engine/private/components/: CameraComponent.cxx  EditorCameraComponent.cxx  ModelComponent.cxx
engine/private/core/: Engine.cxx  Scene.cxx
engine/private/detail/media/: GLTF_Model.cxx  GLTF_Model.hxx  ModelImporter.cxx  ModelImporter.hxx
engine/private/detail/spec/: glTF.hxx
engine/private/editor/: Editor.cxx  Editor.hxx
engine/private/hal/vulkan/: Renderer.cxx  Window.cxx
engine/private/media/glTF/: glTF-Extension.hxx  glTF-Extensions.cxx  glTF-Extensions.hxx  glTF-Model.cxx  glTF-Model.hxx  glTF-Util.hxx  glTF.hxx
engine/private/render/: Buffer.hxx  ColorBuffer.hxx  CommandBuffer.hxx  CommandPool.hxx  DepthBuffer.hxx  DescriptorPool.hxx  DescriptorSet.hxx  DescriptorSetLayout.hxx  DeviceMemory.hxx  Fence.hxx  Framebuffer.hxx  GraphicsPipeline.hxx  Image.hxx  ImageView.hxx  IndexBuffer.hxx  Instance.hxx  LogicalDevice.hxx  Material.cxx  Material.hxx  Mesh.cxx  Mesh.hxx  ModelLoader.cxx  ModelLoader.hxx  NativeRenderObject.hxx  PhysicalDevice.hxx  PipelineLayout.hxx  Queue.hxx  RenderApi.hxx  RenderFwd.hxx  RenderPass.hxx  RenderSpecification.hxx  Renderer.hxx  ResourceManager.cxx  ResourceManager.hxx  ResourceManager.ixx  Sampler.hxx  Semaphore.hxx  Shader.hxx  ShaderObjects.hxx  StorageBuffer.hxx  (+7 more)
engine/private/render/ model/: Material.cxx  Mesh.cxx  ModelLoader.cxx  Skeleton.cxx
engine/private/render/model/: Material.cxx  ModelLoader.cxx  Skeleton.cxx
engine/private/render/opengl/: opengl-Renderer.cxx  opengl-Window.cxx
engine/private/render/vulkan/: vulkan-AttachmentBuffer.cxx  vulkan-AttachmentBuffer.hxx  vulkan-Buffer.cxx  vulkan-Buffer.hxx  vulkan-ColorBuffer.cxx  vulkan-ColorBuffer.hxx  vulkan-CommandBuffer.cxx  vulkan-CommandBuffer.hxx  vulkan-CommandPool.cxx  vulkan-CommandPool.hxx  vulkan-DepthBuffer.cxx  vulkan-DepthBuffer.hxx  vulkan-DescriptorPool.cxx  (+50 more)
engine/private/systems/: AnimationSystem.cxx  CameraSystem.cxx  InputSystem.cxx  ModelSystem.cxx
engine/private/ui/: Dock.cxx  MainWindow.cxx  RootWidget.hxx  UserInterface.cxx  UserInterface.hxx
engine/public/api/: Api.hpp  Assert.hpp  Check.hpp  Construct.hpp  Ensure.hpp  Flag.hpp  Function.hpp  Hash.hpp  Log.hpp  Math.hpp  NoExcept.hpp  Ref.hpp  Result.hpp  Todo.hpp  Types.hpp  Version.hpp  meta.h  meta.hpp
engine/public/components/: CameraComponent.cpp  CameraComponent.hpp  CubeMapComponent.hpp  EditorCameraComponent.hpp  EditorComponent.hpp  LightComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  TransformComponent.hpp
engine/public/core/: BasicGeometry.hpp  Engine.cpp  Engine.hpp  Engine.ipp  Entity.hpp  Entity.ipp  Framebuffer.hpp  Mesh.hpp  Renderbuffer.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  Scene.ipp  Shader.hpp  Texture2D.hpp  TextureCubeMap.hpp  Vertex.hpp  Window.hpp
engine/public/editor/: Editor.hpp
engine/public/event/: Event.hpp
engine/public/include/: R3
engine/public/input/: Event.hpp  InputCodes.hpp  KeyCodes.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
engine/public/render/: Buffer.hpp  ColorBuffer.hpp  CommandBuffer.hpp  CommandPool.hpp  DepthBuffer.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  DeviceMemory.hpp  Fence.hpp  Framebuffer.hpp  GraphicsPipeline.hpp  Image.hpp  ImageView.hpp  IndexBuffer.hpp  Instance.hpp  LogicalDevice.hpp  Material.hpp  Mesh.hpp  ModelLoader.hpp  NativeRenderObject.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineLayout.hpp  Queue.hpp  Queues.hpp  RenderApi.hpp  RenderFwd.hpp  RenderPass.hpp  RenderSpecification.hpp  RenderView.cpp  RenderView.hpp  Renderer.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  ShaderObjects.hpp  StorageBuffer.hpp  Surface.hpp  Swapchain.hpp  (+11 more)
engine/public/systems/: AnimationSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  CubeMapSystem.cpp  CubeMapSystem.hpp  InputSystem.cpp  InputSystem.hpp  ModelSystem.cpp  ModelSystem.hpp  System.hpp  TickSystem.hpp
engine/public/ui/: Dock.hpp  MainWindow.hpp  UserInterface.hpp  Widget.hpp
engine/src/api/: Check.hpp  Clock.cpp  Clock.hpp  Ensure.hpp  Log.hpp  Math.hpp  Todo.hpp  Types.hpp  Version.hpp
engine/src/components/: CameraComponent.hpp  Draw.hpp  LightComponent.hpp  ModelComponent.cpp  ModelComponent.hpp
engine/src/core/: Actor.cpp  Actor.hpp  Camera.cpp  Camera.hpp  Component.hpp  ECS.cpp  ECS.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EntityBase.hpp  Input.hpp  Mesh.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.hpp  SubSystem.hpp  System.hpp  Texture.hpp  Texture2D.hpp  Vertex.hpp  Window.hpp
engine/src/hal/: IRenderer.hpp  IWindow.hpp
engine/src/systems/: CameraSystem.cpp  EntitySystem.hpp  InputSystem.hpp  ModelSystem.cpp  ModelSystem.hpp  TickSystem.hpp
tests/: CMakeLists.txt  test_cube.cpp  test_model.cpp
tests/animation/: animation.test.cpp  test_animation.cpp
tests/cube/: CMakeLists.txt  test_cube.cpp
tests/gltf/: test_glft.cpp
tests/model/: test_model.cpp
tests/sponza/: sponza.test.cpp
tests/sponza_night/: sponza_night.test.cpp
tests/vulkan/: CMakeLists.txt  vulkan.test.cpp
(+165 files in other folders)
