cmake_minimum_required(VERSION 3.20)
project(R3_EDITOR LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if (MSVC)
	add_compile_options("/EHsc")
endif ()


file(GLOB_RECURSE CXX_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/editor/*.cxx")

#[[ R3 EDITOR ]]
add_library(R3_EDITOR STATIC ${CXX_SOURCES})

if (MSVC)
	set_target_properties(R3_EDITOR PROPERTIES COMPILE_FLAGS  "${CMAKE_CXX_FLAGS} /W4")
else ()
	set_target_properties(R3_EDITOR PROPERTIES COMPILE_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
endif ()

#[[ R3 EDITOR INCLUDES ]]
target_include_directories(R3_ENGINE PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(R3_ENGINE PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/editor")

#[[ R3 EXTERNAL DEPENDECIES ]]
add_subdirectory(extern)
