project(R3_ENGINE)

file(GLOB_RECURSE CXX_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")

add_library(R3_ENGINE "${CXX_SRCS}")

if (MSVC)
	target_compile_options(R3_ENGINE PUBLIC "/W4")
else ()
	target_compile_options(R3_ENGINE PUBLIC "-Wall -Wextra -Wpedantic")
endif ()
set_property(TARGET R3_ENGINE PROPERTY COMPILE_WARNING_AS_ERROR ON)

target_compile_definitions(R3_ENGINE
	PUBLIC
	# Renderer
		-DR3_OPENGL=$<BOOL:${R3_OPENGL}>
		-DR3_VULKAN=$<BOOL:${R3_VULKAN}>
	# Build
		-DR3_BUILD_DEBUG=$<BOOL:${R3_BUILD_DEBUG}>
		-DR3_BUILD_RELEASE=$<BOOL:${R3_BUILD_RELEASE}>
		-DR3_BUILD_DISTRIBUTION=$<BOOL:${R3_BUILD_DISTRIBUTION}>
	# Logging
		-DR3_LOG_VERBOSE=$<BOOL:${R3_LOG_VERBOSE}>
		-DR3_LOG_INFO=$<BOOL:${R3_LOG_INFO}>
		-DR3_LOG_WARNING=$<BOOL:${R3_LOG_WARNING}>
		-DR3_LOG_ERROR=$<BOOL:${R3_LOG_ERROR}>
	# Editor
		-DR3_EDITOR=$<BOOL:${R3_EDITOR}>
	# Dependencies
		-DGLFW_INCLUDE_NONE=1
		-DGLM_FORCE_RADIANS=1
		-DGLM_FORCE_DEPTH_ZERO_TO_ONE=$<BOOL:${R3_VULKAN}>
	PRIVATE
	# Linkage
		-DR3_ENGINE=1
)

target_include_directories(R3_ENGINE
	PUBLIC
		"${CMAKE_CURRENT_SOURCE_DIR}/public"
	PRIVATE
		"${CMAKE_CURRENT_SOURCE_DIR}/private"
)
